refactor(admin): replace domain service SQL with domain model aggregation
- Delete AdminPermissionService (SQL in domain service is anti-pattern)
- Create AdminPermissionAppService using domain model for data aggregation
- Refactor SaTokenConfig to inject AppService instead of domain service
- Update AdminAuthAppService to use AdminPermissionAppService
- Update AdminManagementAppService to use domain model directly
- Add DDD architecture principles section to development guide

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>